# jac

./: .dockerignore  .envrc  .gitignore  .gitmodules  .jac_ai_tui_history  .jacignore  .pre-commit-config.yaml  AGENTS.md  BACKLOG.md  BENCHMARKS_AND_FINDINGS.md  CBINDGEN.md  CEF_QA_IMPL_PLAN.md  CONSOLE_FIX_SUMMARY.md  CONTRIBUTING.md  DESKTOP_ARCH.md  DISCUSSION.md  ELECTRON_ARCH.md  HYBRID_EXECUTION_COMPLETE.md  HYBRID_EXECUTION_DESIGN.md  HYBRID_EXECUTION_IMPLEMENTATION.md  IDEAS.md  IMPLEMENTATION.md  IMPLEMENTATION_MANIFEST.md  IMPLEMENTATION_REPORT.md  IMPLEMENTATION_SUMMARY.md  INTEROP_BENCH.md  ISSUE.md  J2_COMPILER_PLAN.md  JAC_AUTHORING_SKILL_EVAL.md  JAC_DOCUMENTATION_OUTLINE_v3.md  JAC_STYLE.md  LEARNING-RECORD-FORMAT.md  LLVM_ARCHITECTURE_ANALYSIS.md  LLVM_USAGE_GUIDE.md  MISSION-FORMAT.md  NATIVE_PRINTF_GUIDE.md  PLAN-tui-macos.md  PLAN-tui-windows.md  PLAN.md  PR12.txt  (+50 more)
bridges/: Cargo.toml
bridges/jac-bridge/: Cargo.toml  README.md
bridges/jac-bridge-adopt/: Cargo.toml
bridges/jac-bridge-adopt/src/: lib.rs
bridges/jac-bridge-async/: Cargo.toml
bridges/jac-bridge-async/src/: lib.rs
bridges/jac-bridge-binder/: Cargo.toml
bridges/jac-bridge-binder/src/: classify.rs  codegen.rs  coverage.rs  lib.rs  main.rs  overlay.rs  types.rs
bridges/jac-bridge-binder/tests/: corpus.rs  determinism.rs  roundtrip.rs  typed_records.rs
bridges/jac-bridge-identity/: Cargo.toml
bridges/jac-bridge-identity/src/: lib.rs
bridges/jac-bridge-inspect/: Cargo.toml
bridges/jac-bridge-inspect/src/: main.rs
bridges/jac-bridge-list/: Cargo.toml
bridges/jac-bridge-list/src/: lib.rs
bridges/jac-bridge-loader/: pyproject.toml
bridges/jac-bridge-loader/jac_bridge_loader/: __init__.py  _blob.py  _codegen.py  _elf.py  _finder.py  _na_codegen.py  rust_namespace.py
bridges/jac-bridge-loader/tests/: _fixtures.jac  conftest.py  test_async.jac  test_cache_install.jac  test_cache_install.py  test_jaclang_runtime_import.jac  test_jaclang_runtime_import.py  test_list.jac  test_loader.jac  test_loader.py  test_loader_optional.jac  test_loader_optional.py  test_map.jac  test_na_codegen.jac  test_na_codegen.py  test_na_codegen_list.jac  test_na_codegen_map.jac  test_na_codegen_scalar.jac  test_rust_namespace.jac  test_rust_namespace.py  test_scalar.jac
bridges/jac-bridge-map/: Cargo.toml
bridges/jac-bridge-map/src/: lib.rs
bridges/jac-bridge-owning/: Cargo.toml
bridges/jac-bridge-owning/src/: lib.rs
bridges/jac-bridge-owning2/: Cargo.toml
bridges/jac-bridge-owning2/src/: lib.rs
bridges/jac-bridge-owning3/: Cargo.toml
bridges/jac-bridge-owning3/src/: lib.rs
bridges/jac-bridge-reentrant/: Cargo.toml
bridges/jac-bridge-reentrant/src/: lib.rs
bridges/jac-bridge-regex/: Cargo.toml  build.rs
bridges/jac-bridge-regex-binder/: Cargo.toml
bridges/jac-bridge-regex-binder/src/: lib.rs
bridges/jac-bridge-regex-v2/: Cargo.toml
bridges/jac-bridge-regex-v2/src/: lib.rs
bridges/jac-bridge-regex/jac/: regex.jac  regex_native.jac  test_regex.jac
bridges/jac-bridge-regex/python/: conftest.py  regex_bridge.py  test_ctypes.py
bridges/jac-bridge-regex/src/: lib.rs
bridges/jac-bridge-scalar/: Cargo.toml
bridges/jac-bridge-scalar/src/: lib.rs
bridges/jac-bridge-schema/: Cargo.toml
bridges/jac-bridge-schema/src/: lib.rs
bridges/jac-bridge-semver/: Cargo.toml
bridges/jac-bridge-semver/src/: lib.rs
bridges/jac-bridge-view/: Cargo.toml
bridges/jac-bridge-view/src/: lib.rs
bridges/jac-bridge/src/: lib.rs
bridges/jac-bridge/tests/: compile_fail.rs  guards.rs  wide.rs  wide_records.rs
bridges/reference/: EXAMPLE-PASS-METRIC.md  FFI-LANES-PLAN.md  HANDLE-SOUNDNESS-LANE.md  PHASE-1-TASKS.md  README.md  SLOTKIND-SPEC.md  TEST-MAP.md  TYPE-MODEL-V2-PLAN.md  WIDE-LANE-CONFORMANCE.md  ZERO-COPY-LANE.md  regex.jacbridge
bridges/tools/: build_bridge_artifacts.jac  build_bridge_artifacts.py  merge_registry_index.jac  merge_registry_index.py
jac-byllm/: README.md  jac.toml  pyproject.toml
jac-byllm/byllm/: __init__.py  cli.jac  config_loader.jac  exceptions.jac  hooks_metadata.py  lib.jac  llm.impl.jac  llm.jac  llm.py  llm_connector.jac  llm_connector.py  local_runtime.jac  mcp.jac  model_cache.jac  mtir.impl.jac  mtir.jac  mtir.py  observability.jac  parallel.jac  plugin.jac  plugin.py  plugin_config.jac  schema.impl.jac  schema.jac  types.impl.jac  types.jac  types.py  visit_routing.jac
jac-byllm/byllm/commands/: __init__.py  test_gen.jac
jac-byllm/byllm/impl/: config_loader.impl.jac  mcp.impl.jac  mtir.impl.jac  (+2 more)
jac-byllm/page/: README.md  index.html  package-lock.json  package.json
jac-byllm/tests/: test_ai_agent.jac  test_byllm.jac  test_byllm.py  test_compaction.jac  test_integration_byllm.jac  test_mtir_integration.jac  test_mtir_integration.py  test_multimodal_tool_results.jac  test_parallel.jac  test_test_gen.jac  test_visit_routing.jac
jac-cloud/jac-deploy/: README.md  deploy.json  pyproject.toml
jac-code-main/: .gitignore  README.md  cli.impl.jac  cli.jac  jac.toml  pyproject.toml  pytest.ini
jac-code-main/docs/: ARCHITECTURE.md  PROGRESS.md  ROADMAP.md  SLIDES.md
jac-code-main/jac_coder/: __init__.py  api.jac  cli_entry.py  config.jac  context.jac  events.jac  mcp_manager.jac  memory.jac  nodes.jac  permission.jac  serve_entry.jac  server.jac  walkers.jac
jac-code-main/tests/: __init__.jac  check_context.jac  check_events.jac  check_graph.jac  check_interact.jac  check_memory.jac  check_selfcorrect.jac  check_tools.jac  conftest.py  test_context.py  test_events.py  test_graph.py  test_interact.py  test_memory.py  test_selfcorrect.py  test_tools.py
jac-code-main/web/: .gitignore  global.css  jac.toml  main.jac
jac-desktop/: DESIGN-plugin-ipc.md  PROGRESS.md  README.md  jac.toml  pyproject.toml
jac-desktop/jac_desktop/: cli.jac  config_loader.jac  enums.jac  plugin.jac  plugin_config.jac  runtime.py
jac-mtllm/: pyproject.toml
jac-mtllm/mtllm/: __init__.py  aott.py  gins.py  llm.py  llm_connector.py  plugin.py  types.py  visit_magic.py
jac-scale/jac-scale/: pyproject.toml
jaseci-package/: jac.toml  pyproject.toml
(+5612 files in other folders)
