[workspace]
members = [
    "jac-bridge-schema",
    "jac-bridge",
    "jac-bridge-regex",
    "jac-bridge-regex-v2",
    "jac-bridge-owning",
    "jac-bridge-owning2",
    "jac-bridge-owning3",
    "jac-bridge-reentrant",
    "jac-bridge-view",
    "jac-bridge-scalar",
    "jac-bridge-map",
    "jac-bridge-list",
    "jac-bridge-async",
    "jac-bridge-inspect",
    "jac-bridge-binder",
]
resolver = "2"

[profile.release]
panic = "unwind"
