[tool.poetry]
name = "mtllm"
version = "0.3.10"
description = "MTLLM Provides Easy to use APIs for different LLM Providers to be used with Jaseci's Jaclang Programming Language."
authors = ["Jason Mars <jason@jaseci.org>"]
maintainers = ["Jason Mars <jason@jaseci.org>"]
license = "MIT"
readme = "README.md"
keywords = ["llm", "jaclang", "jaseci", "mtllm"]

[tool.poetry.dependencies]
jaclang = "0.8.5"
loguru = "~0.7.2"
pillow = "~10.4.0"
openai = "1.99.9"

# For stability we are pinning the version and manually updating and testing as new
# features and patches are added.
# see: https://github.com/BerriAI/litellm/issues/13711 the bug that caused versioning issues
litellm = "1.75.6"

[tool.poetry.group.dev.dependencies]
pytest = "^8.3.2"

[tool.poetry.extras]
tools = ["wikipedia"]
video = ["opencv-python-headless"]

[tool.poetry.plugins."jac"]
mtllm = "mtllm.plugin:JacMachine"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
