[tool.poetry]
name = "jaseci"
version = "2.2.1"
description = "Jaseci - A complete AI-native programming ecosystem with Jac language, LLM integration, full-stack web apps, and Streamlit visualization"
authors = ["Jason Mars <jason@mars.ninja>"]
maintainers = ["Jason Mars <jason@mars.ninja>"]
license = "MIT"
readme = "README.md"
keywords = [
    "jac",
    "jaclang",
    "jaseci",
    "ai",
    "llm",
    "full-stack",
    "web-apps",
    "streamlit",
    "programming-language",
    "machine-learning",
    "artificial-intelligence",
]
repository = "https://github.com/Jaseci-Labs/jaseci"
homepage = "https://jaseci.org"
documentation = "https://jac-lang.org"
packages = [{ include = "jaseci" }]

[tool.poetry.dependencies]
python = "^3.11.0"
jaclang = { git = "https://github.com/jaseci-labs/jaseci.git", branch = "main", subdirectory = "jac" }
byllm = { git = "https://github.com/jaseci-labs/jaseci.git", branch = "main", subdirectory = "jac-byllm" }
jac-client = { git = "https://github.com/jaseci-labs/jaseci.git", branch = "main", subdirectory = "jac-client" }
jac-streamlit = { git = "https://github.com/jaseci-labs/jaseci.git", branch = "main", subdirectory = "jac-streamlit" }


[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
