[project]
name = "jaseci"
version = "2.2.1"
description = "Jaseci - A complete AI-native programming ecosystem with Jac language, LLM integration, full-stack web apps, and Streamlit visualization"
authors = [{name = "Jason Mars", email = "jason@mars.ninja"}]
maintainers = [{name = "Jason Mars", email = "jason@mars.ninja"}]
license = "MIT"
readme = "README.md"
keywords = [
    "jac",
    "jaclang",
    "jaseci",
    "ai",
    "llm",
    "full-stack",
    "web-apps",
    "streamlit",
    "programming-language",
    "machine-learning",
    "artificial-intelligence",
]
requires-python = ">=3.11"
dependencies = [
    "jaclang @ git+https://github.com/Jaseci-Labs/jaseci.git@main#subdirectory=jac",
    "byllm @ git+https://github.com/Jaseci-Labs/jaseci.git@main#subdirectory=jac-byllm",
    "jac-client @ git+https://github.com/Jaseci-Labs/jaseci.git@main#subdirectory=jac-client",
    "jac-streamlit @ git+https://github.com/Jaseci-Labs/jaseci.git@main#subdirectory=jac-streamlit",
]

[project.urls]
Repository = "https://github.com/Jaseci-Labs/jaseci"
Homepage = "https://jaseci.org"
Documentation = "https://jac-lang.org"

[tool.setuptools.packages.find]
include = ["jaseci*"]

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"
