[package]
name = "jac-bridge-binder"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "jac-bridge-binder"
path = "src/main.rs"

[lib]
name = "jac_bridge_binder"
path = "src/lib.rs"

[dependencies]
rustdoc-types = "0.60.0"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.8"

[dev-dependencies]
