[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.backends.legacy:build"

[project]
name = "jac-bridge-loader"
version = "0.1.0"
description = "Auto-generate Python ctypes bindings from jac-bridge .so D2 metadata"
requires-python = ">=3.11"

[tool.setuptools.packages.find]
where = ["."]
include = ["jac_bridge_loader*"]
