# Third callback-bearing bridge crate (Phase 0.1.1). Exists ALONGSIDE
# jac-bridge-owning and jac-bridge-owning2 in one na module so the per-crate
# allocator keying (task 0.1.1) can be proven with THREE crates interleaved:
# each crate's callback return buffer must be minted+freed by ITS OWN
# `jac_<module>_make_buf`/`free_buf`, never another crate's. Deliberately
# minimal — one opaque type, one callback method, its own guarded allocator.
[package]
name = "jac-bridge-owning3"
version = "0.1.0"
edition = "2021"
description = "Third callback crate (distinct guarded allocator) for the three-crate per-crate-allocator conformance gate"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
jac-bridge = { path = "../jac-bridge" }
regex = "1"
