[project]
name = "jac-deploy"
version = "0.1.0"
description = "package used for deployment of jac created programmes"
authors = [
    {name = "juzailmlwork",email = "juzailmlwork@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.12,<4.0.0"
dependencies = [
    "jaclang (>=0.8.5,<0.9.0)"
]
[tool.poetry.plugins."jac"]
"deploy" = "jac_deploy.plugin:JacCmd"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.group.dev.dependencies]
pytest = "^8.4.1"

