[project]
name = "jac-scale"
version = "0.1.0"
description = ""
authors = [
    {name = "juzailmlwork",email = "juzailmlwork@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.12,<4.0.0"
packages = [{include = "jac_scale"}]
dependencies = [
    "jaclang (>=0.8.9,<0.9.0)",
    "boto3 (>=1.40.52,<2.0.0)",
    "python-dotenv (>=1.1.1,<2.0.0)",
    "kubernetes (>=34.1.0,<35.0.0)",
    "mypy-boto3-elasticbeanstalk (>=1.40.15,<2.0.0)",
    "mypy-boto3-iam (>=1.40.0,<2.0.0)",
    "docker (>=7.1.0,<8.0.0)"
]

[tool.poetry.plugins.jac]
hello = "jac_scale.plugin:JacCmd"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
